Update 项目实践 -- 组件化传值.md

--- a/项目实践 -- 组件化传值.md
+++ b/项目实践 -- 组件化传值.md
@@ -1,5 +1,9 @@
 # 项目实践 -- 组件化传值
+@hkk
 ## 组件间信息交流
 
-成功失败传输对象，这样对象可以很好的包含各种信息\n
+成功失败传输对象，这样对象可以很好的包含各种信息
+
 eg.
+## restful API 需要区分int、string
+不确定类型，会为之后的判断、使用开源组件 带来繁琐的处理
