--- a/项目实践 -- 组件化传值.md
+++ b/项目实践 -- 组件化传值.md
@@ -5,5 +5,5 @@
 成功失败传输对象，这样对象可以很好的包含各种信息
 
 eg.
-## restful API 需要区分int、string
+## restful API 需要区分number、string 【整型和流】
 不确定类型，会为之后的判断、使用开源组件 带来繁琐的处理
